# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.yaml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
